# api/workflow.pb.go
@@ -230,11 +230,12 @@ func (m *GetWorkflowLogsRequest) GetContainerName() string {
 }
 
 type ListWorkflowsRequest struct {
-	Namespace            string   `protobuf:"bytes,1,opt,name=namespace,proto3" json:"namespace,omitempty"`
-	WorkflowTemplateUid  string   `protobuf:"bytes,2,opt,name=workflowTemplateUid,proto3" json:"workflowTemplateUid,omitempty"`
-	XXX_NoUnkeyedLiteral struct{} `json:"-"`
-	XXX_unrecognized     []byte   `json:"-"`
-	XXX_sizecache        int32    `json:"-"`
+	Namespace               string   `protobuf:"bytes,1,opt,name=namespace,proto3" json:"namespace,omitempty"`
+	WorkflowTemplateUid     string   `protobuf:"bytes,2,opt,name=workflowTemplateUid,proto3" json:"workflowTemplateUid,omitempty"`
+	WorkflowTemplateVersion string   `protobuf:"bytes,3,opt,name=workflowTemplateVersion,proto3" json:"workflowTemplateVersion,omitempty"`
+	XXX_NoUnkeyedLiteral    struct{} `json:"-"`
+	XXX_unrecognized        []byte   `json:"-"`
+	XXX_sizecache           int32    `json:"-"`
 }
 
 func (m *ListWorkflowsRequest) Reset()         { *m = ListWorkflowsRequest{} }
@@ -272,6 +273,13 @@ func (m *ListWorkflowsRequest) GetNamespace() string {
 func (m *ListWorkflowsRequest) GetWorkflowTemplateUid() string {
 	if m != nil {
 		return m.WorkflowTemplateUid
+	}
+	return ""
+}
+
+func (m *ListWorkflowsRequest) GetWorkflowTemplateVersion() string {
+	if m != nil {
+		return m.WorkflowTemplateVersion
 	}
 	return ""
 }
@@ -495,57 +503,58 @@ func init() {
 func init() { proto.RegisterFile("workflow.proto", fileDescriptor_892c7f566756b0be) }
 
 var fileDescriptor_892c7f566756b0be = []byte{
-	// 799 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xac, 0x56, 0x5f, 0x4f, 0x2b, 0x45,
-	0x14, 0xcf, 0x50, 0x8a, 0xf4, 0x90, 0x02, 0x1e, 0x4a, 0xa9, 0x15, 0x22, 0x8e, 0x98, 0x80, 0x90,
-	0x6e, 0xa9, 0x7f, 0x62, 0x30, 0x44, 0x0d, 0x01, 0x7c, 0x68, 0x8c, 0xa9, 0x22, 0x09, 0x2f, 0x32,
-	0xb4, 0x43, 0xdd, 0x58, 0x76, 0xd6, 0x9d, 0x69, 0x89, 0x69, 0xfa, 0xa0, 0x26, 0x3e, 0xf8, 0xaa,
-	0x6f, 0x7e, 0x11, 0x9f, 0xf5, 0x23, 0xf0, 0xe2, 0x07, 0xf0, 0x7e, 0x8f, 0x9b, 0x9d, 0xdd, 0x59,
-	0x76, 0xb7, 0x7b, 0xa1, 0xbd, 0xdc, 0xb7, 0xce, 0x9c, 0x33, 0xe7, 0xf7, 0xfb, 0x9d, 0x7f, 0x5b,
-	0x58, 0xbc, 0x15, 0xde, 0x0f, 0xd7, 0x3d, 0x71, 0x5b, 0x73, 0x3d, 0xa1, 0x04, 0xe6, 0x98, 0x6b,
-	0x57, 0xd7, 0xbb, 0x42, 0x74, 0x7b, 0xdc, 0x62, 0xae, 0x6d, 0x31, 0xc7, 0x11, 0x8a, 0x29, 0x5b,
-	0x38, 0x32, 0x70, 0xa9, 0xae, 0x99, 0x27, 0xdf, 0x29, 0x7e, 0xe3, 0xf6, 0x98, 0xe2, 0x81, 0x81,
-	0x5e, 0xc2, 0xea, 0x91, 0xc7, 0x99, 0xe2, 0xe7, 0xa1, 0x43, 0x8b, 0xff, 0xd8, 0xe7, 0x52, 0xe1,
-	0x3a, 0x14, 0x1c, 0x76, 0xc3, 0xa5, 0xcb, 0xda, 0xbc, 0x42, 0x36, 0xc9, 0x76, 0xa1, 0x75, 0x7f,
-	0x81, 0x3b, 0x30, 0x6f, 0x22, 0x56, 0x66, 0x36, 0xc9, 0xf6, 0x42, 0xa3, 0x58, 0x63, 0xae, 0x5d,
-	0x8b, 0xa2, 0x44, 0x66, 0x7a, 0x02, 0x78, 0xca, 0xd5, 0x74, 0xe1, 0x11, 0x66, 0xfd, 0x83, 0x0e,
-	0x5d, 0x68, 0xe9, 0xdf, 0xf4, 0x0b, 0x28, 0x9d, 0x33, 0xd5, 0xfe, 0xfe, 0xe9, 0x91, 0x7e, 0x27,
-	0x50, 0x8e, 0x51, 0x6a, 0x8a, 0xae, 0x7c, 0xe9, 0x60, 0x58, 0x81, 0xd7, 0x5c, 0xd1, 0xf9, 0xd2,
-	0xbf, 0xce, 0xe9, 0x6b, 0x73, 0xc4, 0x2d, 0x28, 0xb6, 0x85, 0xa3, 0x98, 0xed, 0x70, 0x4f, 0xdb,
-	0x67, 0xb5, 0x3d, 0x79, 0x49, 0xaf, 0xa1, 0xd4, 0xb4, 0x65, 0x44, 0x66, 0x42, 0x26, 0x75, 0x58,
-	0x31, 0x09, 0xfe, 0x26, 0x2c, 0xe8, 0x99, 0xdd, 0x09, 0x89, 0x65, 0x99, 0xe8, 0x05, 0xac, 0xa6,
-	0x70, 0xa4, 0x2b, 0x1c, 0xc9, 0xb1, 0x04, 0xf9, 0xb6, 0xe8, 0x3b, 0x4a, 0x83, 0xe4, 0x5b, 0xc1,
-	0x01, 0x77, 0xa1, 0x60, 0xa2, 0xc8, 0xca, 0xcc, 0x66, 0x6e, 0xbc, 0xc2, 0xf7, 0x76, 0xba, 0x05,
-	0xf3, 0x4d, 0xd1, 0x3d, 0x76, 0x94, 0xf7, 0x93, 0x9f, 0x0f, 0x5f, 0x20, 0x0f, 0x03, 0x16, 0x5a,
-	0xe6, 0x48, 0xff, 0x25, 0x30, 0x6f, 0x5e, 0xe3, 0x32, 0xe4, 0xfa, 0x76, 0x27, 0x74, 0xf1, 0x7f,
-	0x66, 0x26, 0xb7, 0x0c, 0x73, 0x52, 0x31, 0xd5, 0x97, 0x61, 0x6e, 0xc3, 0x13, 0x7e, 0x04, 0xe0,
-	0x32, 0x8f, 0xdd, 0x70, 0xc5, 0x3d, 0x59, 0x99, 0xd5, 0xf4, 0xca, 0x09, 0x7a, 0x5f, 0x19, 0x73,
-	0x2b, 0xe6, 0x89, 0x9f, 0xc3, 0x72, 0x3a, 0x37, 0x95, 0xbc, 0x6e, 0xdf, 0xd5, 0xc4, 0x6b, 0x63,
-	0x6c, 0x8d, 0xb9, 0xd3, 0x43, 0x78, 0x7d, 0x0c, 0x23, 0xe2, 0x4e, 0x62, 0xdc, 0x4b, 0x90, 0x1f,
-	0xb0, 0x5e, 0xdf, 0x08, 0x0a, 0x0e, 0x8d, 0xff, 0x8a, 0xb0, 0x64, 0xde, 0x7f, 0xcd, 0xbd, 0x81,
-	0xdd, 0xe6, 0xe8, 0xc1, 0x62, 0x72, 0x06, 0xb1, 0xaa, 0xd9, 0x64, 0x0e, 0x66, 0x35, 0x59, 0x06,
-	0xfa, 0xe1, 0x2f, 0x77, 0xff, 0xff, 0x31, 0x63, 0xd1, 0x77, 0xfc, 0xc9, 0x97, 0xd6, 0x60, 0xff,
-	0x8a, 0x2b, 0xb6, 0x6f, 0x0d, 0xa3, 0x5e, 0x19, 0x59, 0x51, 0xa1, 0x0e, 0xa2, 0xa9, 0x44, 0x1b,
-	0x16, 0x62, 0x23, 0x80, 0x6b, 0x3a, 0xe8, 0xf8, 0x9c, 0xa6, 0xd1, 0x1a, 0x1a, 0x6d, 0x0f, 0xdf,
-	0x9b, 0x00, 0x2d, 0xb8, 0x1d, 0xa1, 0x84, 0x62, 0xa2, 0xf3, 0xf0, 0x0d, 0x1d, 0x33, 0xab, 0xeb,
-	0xab, 0xd5, 0x2c, 0x53, 0xd0, 0xa8, 0x74, 0x57, 0x63, 0xbf, 0x8b, 0x93, 0x28, 0xc5, 0x3e, 0x14,
-	0x13, 0xdb, 0x22, 0x04, 0xcd, 0xda, 0x20, 0x69, 0x8d, 0x1f, 0x6b, 0x9c, 0x06, 0xd6, 0x27, 0xd7,
-	0x68, 0xdd, 0xfa, 0x71, 0xeb, 0x04, 0x7f, 0x23, 0xb0, 0x94, 0x5a, 0x2d, 0xf8, 0x66, 0x3a, 0xb7,
-	0xb1, 0x85, 0x13, 0x62, 0x9b, 0xe9, 0xa1, 0xc7, 0x1a, 0xfb, 0x53, 0x3c, 0x9c, 0x02, 0xdb, 0x15,
-	0x1d, 0x69, 0x0d, 0xc3, 0xad, 0x33, 0xb2, 0x7a, 0xa2, 0x5b, 0x27, 0xf8, 0x17, 0x81, 0x72, 0xb2,
-	0x7f, 0x4c, 0x07, 0x23, 0xcd, 0x68, 0xae, 0xa8, 0xe1, 0x43, 0x5a, 0xd9, 0xe3, 0x40, 0x4f, 0x34,
-	0xbd, 0xcf, 0xe8, 0xde, 0xe3, 0xf4, 0xa2, 0x0f, 0x8d, 0x3c, 0x18, 0x1b, 0x22, 0x7c, 0x46, 0x60,
-	0xe3, 0xcc, 0xed, 0x64, 0x10, 0xf8, 0x96, 0x7b, 0xd2, 0x16, 0x0e, 0xee, 0x68, 0x02, 0x0f, 0xfa,
-	0x3c, 0xc2, 0xf5, 0x67, 0xa2, 0xc9, 0x0e, 0xab, 0xdd, 0x69, 0xc8, 0x5a, 0xc3, 0x34, 0xd9, 0x5a,
-	0xdf, 0xee, 0x8c, 0xac, 0x41, 0x80, 0x99, 0x65, 0x0f, 0x4d, 0xa3, 0x0c, 0x9d, 0xff, 0x10, 0xd8,
-	0xc8, 0x4e, 0xb4, 0xd1, 0xf9, 0x84, 0x62, 0x5c, 0x6b, 0x7d, 0x97, 0xb4, 0xf9, 0x2a, 0xf5, 0x65,
-	0x88, 0xb8, 0x23, 0xb0, 0x12, 0xeb, 0xde, 0xe8, 0xfe, 0xad, 0x74, 0x5f, 0x4f, 0xc8, 0xfb, 0xd7,
-	0xa0, 0x30, 0x23, 0x6c, 0x4c, 0x47, 0xdc, 0xe7, 0x79, 0x71, 0x8a, 0xc7, 0xd3, 0xbf, 0x8a, 0x55,
-	0xcf, 0x14, 0x0b, 0xff, 0x26, 0xb0, 0x1e, 0xdf, 0x33, 0xa9, 0xc2, 0x48, 0xdc, 0x1e, 0x5b, 0x45,
-	0x69, 0x17, 0xa3, 0x73, 0x67, 0x02, 0xcf, 0x70, 0x87, 0x1d, 0x69, 0xe9, 0x87, 0xf8, 0xc9, 0x13,
-	0x44, 0xe0, 0x9f, 0x24, 0xf9, 0x2d, 0x37, 0x68, 0x12, 0xdf, 0x7e, 0x21, 0x93, 0x88, 0x2c, 0x7d,
-	0xc8, 0x25, 0x64, 0xf9, 0x81, 0x66, 0x59, 0xc3, 0xa9, 0xc6, 0xfc, 0x6a, 0x4e, 0xff, 0xa3, 0x7c,
-	0xff, 0x79, 0x00, 0x00, 0x00, 0xff, 0xff, 0x31, 0xf2, 0x48, 0x29, 0x9f, 0x0a, 0x00, 0x00,
+	// 814 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xac, 0x96, 0xcd, 0x6e, 0x23, 0x45,
+	0x10, 0x80, 0xd5, 0x71, 0xbc, 0xc4, 0xb5, 0xf2, 0xee, 0x52, 0xeb, 0x38, 0xc6, 0x64, 0x45, 0x68,
+	0x16, 0x29, 0x61, 0x23, 0x8f, 0x63, 0x7e, 0x14, 0x05, 0x45, 0x80, 0xa2, 0x24, 0x1c, 0x2c, 0x84,
+	0x0c, 0x21, 0x52, 0x2e, 0xa4, 0x63, 0x77, 0xcc, 0x08, 0x67, 0x7a, 0x98, 0x6e, 0x3b, 0x42, 0x96,
+	0x0f, 0x80, 0xc4, 0x81, 0x2b, 0xdc, 0xb8, 0xf0, 0x18, 0x9c, 0xe1, 0x11, 0x72, 0xe1, 0x01, 0xe0,
+	0x3d, 0xd0, 0xf4, 0x74, 0x4f, 0x66, 0xc6, 0x93, 0xc4, 0x26, 0xdc, 0xdc, 0x55, 0xd5, 0x55, 0x5f,
+	0x75, 0xfd, 0x8c, 0xe1, 0xd1, 0xa5, 0x08, 0xbe, 0x3e, 0x1f, 0x88, 0xcb, 0x86, 0x1f, 0x08, 0x25,
+	0xb0, 0xc0, 0x7c, 0xb7, 0xbe, 0xda, 0x17, 0xa2, 0x3f, 0xe0, 0x0e, 0xf3, 0x5d, 0x87, 0x79, 0x9e,
+	0x50, 0x4c, 0xb9, 0xc2, 0x93, 0x91, 0x49, 0x7d, 0xc5, 0x5e, 0xf9, 0x52, 0xf1, 0x0b, 0x7f, 0xc0,
+	0x14, 0x8f, 0x14, 0xf4, 0x14, 0x96, 0xf7, 0x02, 0xce, 0x14, 0x3f, 0x36, 0x06, 0x1d, 0xfe, 0xcd,
+	0x90, 0x4b, 0x85, 0xab, 0x50, 0xf2, 0xd8, 0x05, 0x97, 0x3e, 0xeb, 0xf2, 0x1a, 0x59, 0x23, 0xeb,
+	0xa5, 0xce, 0xb5, 0x00, 0x37, 0x60, 0xc9, 0x7a, 0xac, 0x2d, 0xac, 0x91, 0xf5, 0x87, 0xad, 0x72,
+	0x83, 0xf9, 0x6e, 0x23, 0xf6, 0x12, 0xab, 0xe9, 0x01, 0xe0, 0x21, 0x57, 0xf3, 0xb9, 0x47, 0x58,
+	0x0c, 0x0f, 0xda, 0x75, 0xa9, 0xa3, 0x7f, 0xd3, 0x8f, 0xa1, 0x72, 0xcc, 0x54, 0xf7, 0xab, 0xfb,
+	0x7b, 0xfa, 0x89, 0x40, 0x35, 0x81, 0xd4, 0x16, 0x7d, 0xf9, 0x9f, 0x9d, 0x61, 0x0d, 0x5e, 0xf2,
+	0x45, 0xef, 0x93, 0x50, 0x5c, 0xd0, 0x62, 0x7b, 0xc4, 0xe7, 0x50, 0xee, 0x0a, 0x4f, 0x31, 0xd7,
+	0xe3, 0x81, 0xd6, 0x2f, 0x6a, 0x7d, 0x5a, 0x48, 0x7f, 0x23, 0x50, 0x69, 0xbb, 0x32, 0xa6, 0x99,
+	0x11, 0xa5, 0x09, 0x4f, 0xed, 0x0b, 0x7f, 0x6e, 0x2a, 0x7a, 0xe4, 0xf6, 0x0c, 0x59, 0x9e, 0x0a,
+	0xb7, 0x61, 0x25, 0x2b, 0xfe, 0x82, 0x07, 0xd2, 0x15, 0x9e, 0x01, 0xbf, 0x49, 0x4d, 0x4f, 0x60,
+	0x39, 0x43, 0x28, 0x7d, 0xe1, 0x49, 0x8e, 0x15, 0x28, 0x76, 0xc5, 0xd0, 0x53, 0x1a, 0xaf, 0xd8,
+	0x89, 0x0e, 0xf8, 0x02, 0x4a, 0xd6, 0x93, 0xac, 0x2d, 0xac, 0x15, 0xa6, 0x9b, 0xe3, 0x5a, 0x4f,
+	0x9f, 0xc3, 0x52, 0x5b, 0xf4, 0xf7, 0x3d, 0x15, 0x7c, 0x1b, 0x3e, 0x65, 0xf8, 0x36, 0xdc, 0x38,
+	0x2c, 0x75, 0xec, 0x91, 0xfe, 0x49, 0x60, 0xc9, 0xde, 0xc6, 0x27, 0x50, 0x18, 0xba, 0x3d, 0x63,
+	0x12, 0xfe, 0xcc, 0xad, 0x4b, 0x15, 0x1e, 0x48, 0xc5, 0xd4, 0x50, 0x9a, 0xec, 0xcc, 0x09, 0xdf,
+	0x03, 0xf0, 0x59, 0xc0, 0x2e, 0xb8, 0xe2, 0x81, 0xac, 0x2d, 0x6a, 0xbc, 0x6a, 0x0a, 0xef, 0x53,
+	0xab, 0xee, 0x24, 0x2c, 0xf1, 0x23, 0x78, 0x92, 0x7d, 0x9f, 0x5a, 0x51, 0x77, 0xfe, 0x72, 0xea,
+	0xb6, 0x55, 0x76, 0xa6, 0xcc, 0xe9, 0x2e, 0xbc, 0x3c, 0x15, 0x23, 0x66, 0x27, 0x09, 0xf6, 0x0a,
+	0x14, 0x47, 0x6c, 0x30, 0xb4, 0x09, 0x45, 0x87, 0xd6, 0x5f, 0x65, 0x78, 0x6c, 0xef, 0x7f, 0xc6,
+	0x83, 0x91, 0xdb, 0xe5, 0x18, 0xc0, 0xa3, 0xf4, 0xf8, 0x62, 0x5d, 0xd3, 0xe4, 0xce, 0x74, 0x3d,
+	0x5d, 0x06, 0xfa, 0xee, 0xf7, 0x57, 0x7f, 0xff, 0xbc, 0xe0, 0xd0, 0x37, 0xc2, 0xa5, 0x21, 0x9d,
+	0xd1, 0xd6, 0x19, 0x57, 0x6c, 0xcb, 0x19, 0xc7, 0x5d, 0x36, 0x71, 0xe2, 0x42, 0xed, 0xc4, 0x03,
+	0x8d, 0x2e, 0x3c, 0x4c, 0x4c, 0x0f, 0xae, 0x68, 0xa7, 0xd3, 0x23, 0x9e, 0x8d, 0xd6, 0xd2, 0xd1,
+	0x36, 0xf1, 0xad, 0x19, 0xa2, 0x45, 0xd2, 0x09, 0x4a, 0x28, 0xa7, 0x3a, 0x0f, 0x5f, 0xd1, 0x3e,
+	0xf3, 0xe6, 0xa5, 0x5e, 0xcf, 0x53, 0x45, 0x8d, 0x4a, 0x5f, 0xe8, 0xd8, 0x6f, 0xe2, 0x2c, 0x99,
+	0xe2, 0x10, 0xca, 0xa9, 0x45, 0x63, 0x82, 0xe6, 0x2d, 0x9f, 0x6c, 0x8e, 0xdb, 0x3a, 0x4e, 0x0b,
+	0x9b, 0xb3, 0xe7, 0xe8, 0x5c, 0x86, 0x7e, 0x9b, 0x04, 0x7f, 0x24, 0xf0, 0x38, 0xb3, 0x95, 0xf0,
+	0xd5, 0xec, 0xdb, 0x26, 0x76, 0x95, 0x89, 0x6d, 0xa7, 0x87, 0xee, 0xeb, 0xd8, 0x1f, 0xe0, 0xee,
+	0x1c, 0xb1, 0x7d, 0xd1, 0x93, 0xce, 0xd8, 0x2c, 0xac, 0x89, 0x33, 0x10, 0xfd, 0x26, 0xc1, 0x5f,
+	0x09, 0x54, 0xd3, 0xfd, 0x63, 0x3b, 0x18, 0x69, 0x4e, 0x73, 0xc5, 0x0d, 0x6f, 0xb0, 0xf2, 0xc7,
+	0x81, 0x1e, 0x68, 0xbc, 0x0f, 0xe9, 0xe6, 0xdd, 0x78, 0xf1, 0x37, 0x4a, 0xee, 0x4c, 0x0d, 0x11,
+	0xfe, 0x43, 0xe0, 0xd9, 0x91, 0xdf, 0xcb, 0x01, 0x30, 0xeb, 0x0a, 0x37, 0x34, 0xc0, 0xad, 0x36,
+	0x77, 0xb0, 0x7e, 0x47, 0x34, 0xec, 0xb8, 0xde, 0x9f, 0x07, 0xd6, 0x19, 0x67, 0x61, 0x1b, 0x43,
+	0xb7, 0x37, 0x71, 0x46, 0x51, 0xcc, 0x3c, 0xbd, 0x51, 0x4d, 0x72, 0xf2, 0xfc, 0x83, 0xc0, 0xb3,
+	0xfc, 0x87, 0xb6, 0x79, 0xde, 0xa3, 0x18, 0xe7, 0x3a, 0xbf, 0x53, 0xda, 0xfe, 0x3f, 0xf3, 0xcb,
+	0x49, 0xe2, 0x8a, 0xc0, 0xd3, 0x44, 0xf7, 0xc6, 0xf2, 0xd7, 0xb2, 0x7d, 0x3d, 0x23, 0xf7, 0x0f,
+	0x51, 0x61, 0x26, 0xd8, 0x9a, 0x0f, 0x3c, 0xe4, 0x3c, 0x39, 0xc4, 0xfd, 0xf9, 0x6f, 0x25, 0xaa,
+	0x67, 0x8b, 0x85, 0xbf, 0x13, 0x58, 0x4d, 0xee, 0x99, 0x4c, 0x61, 0x24, 0xae, 0x4f, 0xad, 0xa2,
+	0xac, 0x89, 0xcd, 0x73, 0x63, 0x06, 0x4b, 0xb3, 0xc3, 0xf6, 0x74, 0xea, 0xbb, 0xf8, 0xfe, 0x3d,
+	0x92, 0xc0, 0x5f, 0x48, 0xfa, 0x5b, 0x6e, 0xa3, 0x49, 0x7c, 0xfd, 0x46, 0x92, 0x18, 0x96, 0xde,
+	0x66, 0x62, 0x28, 0xdf, 0xd1, 0x94, 0x0d, 0x9c, 0x6b, 0xcc, 0xcf, 0x1e, 0xe8, 0x3f, 0xa3, 0x6f,
+	0xff, 0x1b, 0x00, 0x00, 0xff, 0xff, 0xb2, 0x8f, 0x34, 0x6c, 0xda, 0x0a, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
